@@ -62,7 +62,7 @@ public:
     return true;
   }
   
-private:
+protected:
   void push_64_bit_from_32_bit_regs(MIPS_register_t r1, MIPS_register_t r2)
   {
     emit->bc_pushregister(r1);
@@ -88,7 +88,37 @@ public:
 class ModBuiltin : public MulDivBuiltinBase
 {
 public:
-  ModBuiltin(const char *name) : MulDivBuiltinBase(name, "lmod")
+  ModBuiltin(const char *name) : MulDivBuiltinBase(name, "lrem")
   {
   }  
+};
+
+class ShrBuiltin : public MulDivBuiltinBase
+{
+public:
+  ShrBuiltin(const char *name) : MulDivBuiltinBase(name, "lshr")
+  {
+  }  
+
+  bool pass2(Instruction *insn)
+  {
+    /* Concatenate the first and second parameters */
+    this->push_64_bit_from_32_bit_regs(R_A0, R_A1);
+    emit->bc_pushregister(R_A2); /* Low part of the register pair */
+
+    /* The actual operation */
+    emit->bc_generic_insn(this->bc);
+
+    /* Split the result to V0/V1 */
+    emit->bc_dup2();
+    emit->bc_pushconst(32);
+    emit->bc_lushr();
+    emit->bc_l2i();
+    emit->bc_popregister(R_V1);
+
+    emit->bc_l2i();
+    emit->bc_popregister(R_V0);
+    
+    return true;
+  }
 };
